Update Besar Besaran Pt. 3, Pembuatan collapseable sidebar fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     width: 100%; 
     background: rgba(255, 255, 255, 0.753);
     backdrop-filter: blur(10px);    
-    z-index: 999;         
+    z-index: 1001;         
     padding: 10px 20px; 
     box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
 }
@@ -325,6 +325,11 @@ body {
   max-height: calc(100vh - 120px);
   overflow-y: auto;
   background: #fff;
+  z-index: 1000;
+}
+
+#sidebar {
+  z-index: 1000;
 }
 
 /* Hide Scroll di Card */
@@ -347,6 +352,7 @@ body {
   height: 35px;
   padding: 0;
   text-align: center;
+  z-index: 999;
 }
 
 .toggle-btn {
@@ -361,5 +367,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 999;
+}
+
+#mainContent {
+  transition: all 0.3s ease;
+  flex: 1;
+  z-index: 3;
+  position: relative;
 }
